force-app/main/default/objects/VCC_Callout_Data__c/VCC_Callout_Data__c.object-meta.xml
<CustomObject>
    <description>Used for the Integration Test Utility, holding info about the vdif/mpi callouts that are a part of the note-signing-process.</description>
    <label>Callout Data</label>
    <nameField>
        <displayFormat>COD-{0000}</displayFormat>
        <label>Callout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>