force-app/main/default/objects/VCC_Callout_Data__c/fields/VCC_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>VCC_Endpoint__c</fullName>
    <description>The endpoint that is used for the callout when using the Integration Test Utility Tool</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Endpoint</label>
    <length>90</length>
    <type>Text</type>
</CustomField>