force-app/main/default/objects/VCC_Callout_Data__c/fields/VCC_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>VCC_Request_Body__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>The body of the HTTP request that is used for the callout when using the Integration Test Utility Tool</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>