force-app/main/default/objects/VCC_Callout_Data__c/fields/VCC_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>VCC_Response_Time__c</fullName>
    <description>Timestamp for when the response is received</description>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>