force-app/main/default/objects/VCC_Callout_Data__c/fields/VCC_Round_Trip_Time__c.field-meta.xml
<CustomField>
    <fullName>VCC_Round_Trip_Time__c</fullName>
    <description>Calculation of VCC_Response_Time__c - VCC_Request_Time__c to calculate the total time it took for the callout to be completed</description>
    <formula>VCC_Response_Time__c - VCC_Request_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Trip Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>